Mapperlar, testler ve insertsql